# SampleApp

./: .clangd  .gitignore  App.tsx  package-lock.json  package.json
android/: build.gradle
android/app/: build.gradle
android/app/src/main/java/com/sampleapp/: MainApplication.kt  SkiaView.kt  SkiaViewManager.kt  SkiaViewPackage.kt
android/app/src/main/java/com/sampleapp/video/: MediaCodecVideoDecoder.kt  VideoBridge.kt  VideoSurfaceHelper.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
ios/SampleApp.xcodeproj/: project.pbxproj
shared/: NativeSampleModule.cpp  NativeSampleModule.h
shared/drawables/: IDrawable.h  RotatingRect.cpp  RotatingRect.h  VideoRect.cpp  VideoRect.h
shared/encoder/: EncoderConfig.h  IEncoder.h
shared/encoder/android/: AndroidEncoder.cpp  AndroidEncoder.h
shared/engine/: Engine.cpp  Engine.h
shared/logger/: Logger.cpp  Logger.h
shared/preview/: PreviewController.cpp  PreviewController.h
shared/render/: EglContext.cpp  EglContext.h  Renderer.cpp  Renderer.h  SkiaGanesh.cpp  SkiaGanesh.h
shared/video/: IVideoPlayer.h  Timeline.cpp  Timeline.h  VideoPlayerAndroid.cpp  VideoPlayerAndroid.h
specs/: NativeSampleModule.ts
src/: App.tsx
src/components/EncodingControls/: EncodingControls.tsx
src/components/ImageSequencePicker/: ImageSequencePicker.tsx
src/components/PreviewControls/: PreviewControls.tsx
tools/: gen_compile_db.sh
